tests/snapshots/file@variable@use_local_in_initializer.lox.snap
---
source: tests/common/mod.rs
description: "var a = \"outer\";\n{\n  var a = a; // Error at 'a': Can't read local variable in its own initializer.\n}\n"
input_file: crafting_interpreters_test_files/variable/use_local_in_initializer.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × cannot read local variable in its own initializer
   ╭─[3:11]
 2 │ {
 3 │   var a = a; // Error at 'a': Can't read local variable in its own initializer.
   ·           ┬
   ·           ╰── here
 4 │ }
   ╰────
